# Projecto-Messio

./: README.md
C++ Backend/ESP1/: platformio.ini
C++ Backend/ESP1/include/: Actuator_manager.h  Buzzer_manager.h  Garage_led_manager.h  HTTP_manager.h  IR_reading_manager.h  LDR_reading_manager.h  NetworkConfig.h  Reception_led_manager.h  Sensor_manager.h  Servo_manager.h  wifi_Connection.h
C++ Backend/ESP1/src/: main.cpp
C++ Backend/ESP1/src/Connection/: Actuator_manager.cpp  Actuator_manager.h  HTTP_manager.cpp  Sensor_manager.cpp  Sensor_manager.h  wifi_Connection.cpp  wifi_Connection.h
C++ Backend/ESP1/src/LEDS/: Garage_led_manager.cpp  Reception_led_manager.cpp  Reception_led_manager.h
C++ Backend/ESP1/src/Others/: Buzzer_manager.cpp  Servo_manager.cpp  Servo_manager.h
C++ Backend/ESP1/src/Readings/: IR_reading_manager.cpp  IR_reading_manager.h  LDR_reading_manager.cpp  LDR_reading_manager.h
C++ Backend/ESP2/include/: Actuator_manager.h  Display_manager.h  Flame_reading_manager.h  Garage_door_manager.h  NetworkConfig.h  Outter_led_manager.h  Room1_led_manager.h  Room2_led_manager.h  Sensor_manager.h  sensor20a.h  wifi_Connection.h
C++ Backend/ESP2/src/: main.cpp
C++ Backend/ESP2/src/Connections/: Actuator_manager.cpp  (+4 more)
C++ Backend/backend server/: CMakeLists.txt
C++ Backend/backend server/include/: EmergencyMode.h  alarmManager.h  bedTimeMode.h  dataModel.h  flameAlarm.h  garage.h  homeAway.h  outerLed.h  reception.h  room1.h  room2.h  server.h  serverConfig.h  utilities.h
C++ Backend/backend server/src/: alarmManager.cpp  config.yml  dataModel.cpp  dataModel.h  flameAlarm.cpp  flameAlarm.h  main.cpp  server.cpp  server.h  serverConfig.cpp  utilities.cpp
C++ Backend/backend server/src/Modes/: EmergencyMode.cpp  EmergencyMode.h  bedTimeMode.cpp  homeAway.cpp
C++ Backend/backend server/src/Rooms/: garage.cpp  garage.h  outerLed.cpp  reception.cpp  reception.h  room1.cpp  room2.cpp
ESP32 (C++)/ESP1/src/: main.cpp
ESP32 (C++)/ESP2/: platformio.ini
ESP32 (C++)/ESP2/src/: main.cpp
ESP32 (C++)/Main Project/src/: main.cpp
ESP32 (C++)/Main/Sensors/: LDRSensor.cpp  LDRSensor.h
ESP32 (C++)/backend side/: CMakeLists.txt
ESP32 (C++)/backend side/src/: dataModel.cpp  dataModel.h  flameAlarm.cpp  main.cpp  server.cpp  server.h  utilities.cpp  utilities.h
ESP32 (C++)/backend side/src/Modes/: EmergencyMode.cpp  EmergencyMode.h  bedTimeMode.cpp  bedTimeMode.h  homeAway.cpp  homeAway.h  managerMode.cpp  managerMode.h  powerSavingMode.cpp  powerSavingMode.h
ESP32 (C++)/backend side/src/Rooms/: garage.cpp  garage.h  outerLed.h  reception.cpp  reception.h  room1.cpp  room2.cpp  room2.h
MobileApp/: README.md  pubspec.yaml
MobileApp/android/app/: build.gradle.kts
MobileApp/ios/Runner/: Info.plist
MobileApp/ios/Runner.xcodeproj/: project.pbxproj
MobileApp/lib/: main.dart
MobileApp/lib/Widgets/: CustomSwitch.dart
MobileApp/lib/config/: api_config..dart
MobileApp/lib/data/: doors_Data.dart  home_Modes_Data.dart
MobileApp/lib/managers/: doors_Manager.dart  home_Manager.dart
MobileApp/lib/pages/: CustomAppBar.dart  NavigationBar.dart  home_page.dart  lighting_Page.dart  login_page.dart  security_page.dart
MobileApp/lib/services/: api_Service.dart  weather_service.dart
MobileApp/lib/widgets/: CustomSwitch.dart
MobileApp/linux/: CMakeLists.txt
MobileApp/linux/flutter/: generated_plugin_registrant.cc  generated_plugin_registrant.h
MobileApp/linux/runner/: my_application.cc
MobileApp/macos/Runner.xcodeproj/: project.pbxproj
MobileApp/test/: widget_test.dart
MobileApp/web/: index.html  manifest.json
MobileApp/windows/: CMakeLists.txt
MobileApp/windows/flutter/: generated_plugin_registrant.cc  generated_plugin_registrant.h
MobileApp/windows/runner/: Runner.rc  flutter_window.cpp  flutter_window.h  main.cpp  resource.h  utils.cpp  utils.h  win32_window.cpp  win32_window.h
(+149 files in other folders)
